# ike-lang

./: .gitignore  Cargo.toml  shell.nix  test.c  test.ike  test.lua
ike/: color.ike  diagnostic.ike  main.ike  span.ike
ike/ast/: ast.ike  expr.ike  main.ike
ike/c/: equal.ike  expr.ike  format.ike  hash.ike  main.ike  pattern.ike  type.ike
ike/ir/: body.ike  expr.ike  format.ike  pattern.ike
ike/ir/tir/: program.ike  type.ike
ike/ir/uir/: module.ike  program.ike  tcx.ike  type.ike  unify.ike
ike/lex/: token.ike  tokenize.ike
ike/lower/: ascribe.ike  body.ike  call-graph.ike  expr.ike  extern.ike  import.ike  main.ike  path.ike  pattern.ike  register.ike  types.ike
ike/parse/: expr.ike  module.ike  parser.ike  pattern.ike  token.ike  tokenize.ike  type.ike
ike/specialize/: main.ike
libike/: .clang-format  .gitignore  Makefile  a.out  test.c
libike/include/ike/: fs.h  function.h  gc.h  hash.h  os.h  string.h  types.h
libike/src/: gc.c
src/: attr.rs  lib.rs  lsp.rs  main.rs  specialize.rs
src/ast/: mod.rs
src/codegen/: mod.rs  prelude.lua
src/diagnostic/: diagnostic.rs  span.rs
src/ir/: arena.rs  body.rs  expr.rs  mod.rs
src/ir/typed/: mod.rs  type.rs
src/ir/untyped/: context.rs  (+2 more)
src/lower/: mod.rs  pattern.rs
src/lua/: mod.rs  prelude.lua
src/parse/: expr.rs  lex.rs  mod.rs  module.rs  pattern.rs  stream.rs  token.rs  type.rs
std/: assert.ike  channel.ike  debug.ike  env.ike  fs.ike  hash.ike  io.ike  iter.ike  list.ike  map.ike  math.ike  option.ike  os.ike  result.ike  set.ike  string.ike  task.ike
test/parse/: expr.ike
