[package]
name = "ike"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

lsp-server = "0.7"
lsp-types = { version = "0.97", features = ["proposed"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
